--- a/index.html
+++ b/index.html
@@ -83,6 +83,25 @@
                 </div>
             </section>
         </div>
+        <!-- End Jumbotron -->
+
+
+        <!-- Packets -->
+        <section>
+            <div class="small-container second-section">
+                <h2 class="secondary-title">Trova il piano Dropbox Business che fa per te</h2>
+
+                <!-- Pseudo RadioButtons -->
+                <div class="rb-container">
+                    <span class="blue-rb">Fatturazione mensile</span>
+                    <span class="white-rb">Fatturazione mensile</span>
+                </div>
+
+                <!-- Different Packets -->
+            </div>
+        </section>
+        <!-- End Packets -->
+
     </main>
     <!-- END MAIN -->
 
