--- a/index.html
+++ b/index.html
@@ -98,6 +98,98 @@
                 </div>
 
                 <!-- Different Packets -->
+                <div class="packets-container">
+
+                    <!-- Professional packet -->
+                    <div class="col lateral-packet-column">
+
+                        <div class="people-per-packet"> <i class="far fa-user"></i> Singolo </div>
+
+                        <!-- Packet main content -->
+                        <div class="packet-content">
+                            <div class="big-secondary-title">Professional</div>
+                            <div class="normal-text text-bold">19,99€</div>
+                            <div class="time-plan">/mese</div>
+
+                            <div class="small-text"><i class="far fa-user"></i>1 Utente</div>
+                            <div class="small-text"><i class="far fa-folder"></i>3 TB di spazio di archiviazione sicuro</div>
+                            <div class="small-text"><i class="fas fa-pencil-alt"></i> <span> Funzioni di produttività premium e condivisione file semplice e sicura </span></div>
+
+                            <div class="big-btn blue-btn">Provalo gratis per 30 giorni</div>
+                            <div class="small-text">oppure <a href="#">acquista ora</a></div>
+
+                            <!-- Punti salienti piano -->
+                            <div class="normal-text text-bold">Punti salienti piano</div>
+
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Invia file fino a 100GB con Dropbox Transfer</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Cartelle offline su dispositivi mobili</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Pulizia remota dell'account</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Filigrana documento</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Assistenza prioritaria via email e chat</div>
+
+                        </div>
+                    </div>
+
+                    <!-- Standard packet -->
+                    <div class="col middle-packet-column">
+                        <div class="people-per-packet"> <i class="far fa-user"></i> Team </div>
+
+                        <!-- Packet main content -->
+                        <div class="packet-content">
+                            <div class="big-secondary-title">Professional</div>
+                            <div class="normal-text text-bold">19,99€</div>
+                            <div class="time-plan">/utente/mese, a partire da 3 utenti</div>
+
+                            <div class="small-text"><i class="fas fa-user-plus"></i>1 Utente</div>
+                            <div class="small-text"><i class="far fa-folder"></i>3 TB di spazio di archiviazione sicuro</div>
+                            <div class="small-text"><i class="far fa-smile"></i> <span> Funzioni di produttività premium e condivisione file semplice e sicura </span></div>
+
+                            <div class="big-btn blue-btn">Provalo gratis per 30 giorni</div>
+                            <div class="small-text">oppure <a href="#">acquista ora</a></div>
+
+                            <!-- Punti salienti piano -->
+                            <div class="normal-text text-bold">Punti salienti piano</div>
+
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Invia file fino a 100GB con Dropbox Transfer</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Cartelle offline su dispositivi mobili</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Pulizia remota dell'account</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Filigrana documento</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Assistenza prioritaria via email e chat</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Assistenza prioritaria via email e chat</div>
+
+                        </div>
+                    </div>
+
+                    <!-- Advanced packet -->
+                    <div class="col lateral-packet-column">
+                        <div class="people-per-packet"> <i class="far fa-user"></i> Team </div>
+
+                        <!-- Packet main content -->
+                        <div class="packet-content">
+                            <div class="big-secondary-title">Professional</div>
+                            <div class="normal-text text-bold">19,99€</div>
+                            <div class="time-plan">/utente/mese, a partire da 3 utenti</div>
+
+                            <div class="small-text"><i class="fas fa-user-plus"></i>1 Utente</div>
+                            <div class="small-text"><i class="far fa-smile"></i>3 TB di spazio di archiviazione sicuro</div>
+                            <div class="small-text"><i class="fas fa-pencil-alt"></i> <span> Funzioni di produttività premium e condivisione file semplice e sicura </span></div>
+
+                            <div class="big-btn blue-btn">Provalo gratis per 30 giorni</div>
+                            <div class="small-text">oppure <a href="#">acquista ora</a></div>
+
+                            <!-- Punti salienti piano -->
+                            <div class="normal-text text-bold">Punti salienti piano</div>
+
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Invia file fino a 100GB con Dropbox Transfer</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Cartelle offline su dispositivi mobili</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Pulizia remota dell'account</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Filigrana documento</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Assistenza prioritaria via email e chat</div>
+                            <div class="small-text"><i class="blue-check fas fa-check"></i> Assistenza prioritaria via email e chat</div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- End Packets -->
