--- a/index.html
+++ b/index.html
@@ -457,5 +457,133 @@
     </main>
     <!-- END MAIN -->
 
+
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="big-container">
+            <div class="footer-col-container clearfix">
+
+                <!-- First list -->
+                <div class="col twenty-width">
+                    <h4>Dropbox</h4>
+
+                    <ul>
+                        <li>
+                            <a class="normal-text" href="#">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Piani</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Second list -->
+                <div class="col twenty-width">
+                    <h4>Prodotti</h4>
+
+                    <ul>
+                        <li>
+                            <a class="normal-text" href="#">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Piani</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Thrid list -->
+                <div class="col twenty-width">
+                    <h4>Azienda</h4>
+
+                    <ul>
+                        <li>
+                            <a class="normal-text" href="#">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Piani</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Fourth list -->
+                <div class="col twenty-width">
+                    <h4>Supporto</h4>
+
+                    <ul>
+                        <li>
+                            <a class="normal-text" href="#">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Piani</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Fifth list -->
+                <div class="col twenty-width">
+                    <h4>Community</h4>
+
+                    <ul>
+                        <li>
+                            <a class="normal-text" href="#">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a class="normal-text" href="#">Piani</a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="footer-white-line"></div>
+
+            <div class="language">
+                <i class="globe-icon fas fa-globe-americas"></i>
+                <span>Italiano</span>
+                <i class="arrowup fas fa-caret-up"></i>
+            </div>
+        </div>
+    </footer>
+    <!-- END FOOTER -->
 </body>
 </html>
